crates/uitest/fixtures/ty_check/event_indexed_outside_event_struct.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/event_indexed_outside_event_struct.fe
---
error[12-0001]: unsupported `#[indexed]` attribute on struct field `a`
  ┌─ event_indexed_outside_event_struct.fe:4:5
  │
4 │     #[indexed]
  │     ^^^^^^^^^^ `#[indexed]` is only supported on event fields
